--- a/src/Ibw/JobeetBundle/Resources/config/routing.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/routing.yml
@@ -1,7 +1,7 @@
 ibw_jobeet_ibw_job:
     resource: "@IbwJobeetBundle/Resources/config/routing/job.yml"
-    prefix:   /ibw_job
+    prefix:   /job
 
 ibw_jobeet_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: IbwJobeetBundle:Default:index }
+    path:     /
+    defaults: { _controller: IbwJobeetBundle:Job:index }
