--- a/src/Ibw/JobeetBundle/Resources/config/routing/job.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/routing/job.yml
@@ -3,8 +3,12 @@ ibw_job:
     defaults: { _controller: "IbwJobeetBundle:Job:index" }
 
 ibw_job_show:
-    path:     /{id}/show
-    defaults: { _controller: "IbwJobeetBundle:Job:show" }
+#    path:     /{id}/show
+#    defaults: { _controller: "IbwJobeetBundle:Job:show" }
+    path:   /{company}/{location}/{id}/{position}
+    defaults: { _controller: "IbwJobeetBundle:Job:show"}
+    requirements:
+        id: \d+
 
 ibw_job_new:
     path:     /new
