--- a/src/Ibw/JobeetBundle/Resources/config/doctrine/Job.orm.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/doctrine/Job.orm.yml
@@ -59,5 +59,5 @@ Ibw\JobeetBundle\Entity\Job:
                 name: category_id
                 referencedColumnName: id
     lifecycleCallbacks:
-        prePersist: [ setCreatedAtValue ]
+        prePersist: [ setCreatedAtValue, setExpiresAtValue ]
         preUpdate: [ setUpdatedAtValue ]
