--- a/src/Ibw/JobeetBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/doctrine/Category.orm.yml
@@ -1,5 +1,6 @@
 Ibw\JobeetBundle\Entity\Category:
     type: entity
+    repositoryClass:  Ibw\JobeetBundle\Entity\Repository\CategoryRepository
     table: category
     id:
         id:
