--- a/src/Ibw/JobeetBundle/Resources/config/routing.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/routing.yml
@@ -1,3 +1,9 @@
+ibw_jobeet_ibw_category:
+#    path： /category/{slug}
+#    defaults: { _controller: IbwJobeetBundle:Category:show }
+    resource: "@IbwJobeetBundle/Resources/config/routing/category.yml"
+    prefix: /category
+
 ibw_jobeet_ibw_job:
     resource: "@IbwJobeetBundle/Resources/config/routing/job.yml"
     prefix:   /job
