--- a/src/Ibw/JobeetBundle/Resources/config/routing/category.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/routing/category.yml
@@ -1,3 +1,3 @@
 ibw_category:
-    path: /{slug}
-    defaults: {_controller: IbwJobeetBundle:Category:show}
+    path: /{slug}/{page}
+    defaults: {_controller: IbwJobeetBundle:Category:show, page: 1}
