--- a/src/Ibw/JobeetBundle/Resources/config/validation.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/validation.yml
@@ -15,8 +15,8 @@ Ibw\JobeetBundle\Entity\Job:
             - NotBlank: ~
         how_to_apply:
             - NotBlank: ~
-        token:
-            - NotBlank: ~
+#        token:
+#            - NotBlank: ~
         email:
             - NotBlank: ~
             - Email: ~
