--- a/src/Ibw/JobeetBundle/Resources/config/routing/job.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/routing/job.yml
@@ -9,6 +9,10 @@ ibw_job_show:
     defaults: { _controller: "IbwJobeetBundle:Job:show"}
     requirements:
         id: \d+
+ibw_job_preview:
+    path: /{company}/{location}/{$token}/{position}
+    requirements:
+        token: \w+
 
 ibw_job_new:
     path:     /new
@@ -20,15 +24,15 @@ ibw_job_create:
     requirements: { _method: post }
 
 ibw_job_edit:
-    path:     /{id}/edit
+    path:     /{token}/edit
     defaults: { _controller: "IbwJobeetBundle:Job:edit" }
 
 ibw_job_update:
-    path:     /{id}/update
+    path:     /{token}/update
     defaults: { _controller: "IbwJobeetBundle:Job:update" }
     requirements: { _method: post|put }
 
 ibw_job_delete:
-    path:     /{id}/delete
+    path:     /{token}/delete
     defaults: { _controller: "IbwJobeetBundle:Job:delete" }
     requirements: { _method: post|delete }
