--- a/src/Ibw/JobeetBundle/Resources/config/routing/job.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/routing/job.yml
@@ -10,7 +10,8 @@ ibw_job_show:
     requirements:
         id: \d+
 ibw_job_preview:
-    path: /{company}/{location}/{$token}/{position}
+    path: /{company}/{location}/{token}/{position}
+    defaults: {_controller: "IbwJobeetBundle:Job:preview"}
     requirements:
         token: \w+
 
