--- a/src/Ibw/JobeetBundle/Resources/config/services.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/services.yml
@@ -2,3 +2,20 @@ services:
 #    ibw_jobeet.example:
 #        class: Ibw\JobeetBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
+
+    ibw.jobeet.admin.category:
+        class: Ibw\JobeetBundle\Admin\CategoryAdmin
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: 管理, label: 类别管理(category) }
+        arguments:
+            - ~
+            - Ibw\JobeetBundle\Entity\Category
+            - 'IbwJobeetBundle:CategoryAdmin'
+    ibw.jobeet.admin.job:
+        class: Ibw\JobeetBundle\Admin\JobAdmin
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: 管理, label: 职位管理(job) }
+        arguments:
+            - ~
+            - Ibw\JobeetBundle\Entity\Job
+            - 'IbwJobeetBundle:JobAdmin'
