--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,7 +4,7 @@ imports:
     - {resource: services.yml}
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -72,3 +72,28 @@ swiftmailer:
 parameters:
     max_jobs_on_homepage: 10           #首页显示多少条
     max_jobs_on_category: 20           #分类页面显示多少条
+
+sonata_admin:
+    title: 后台
+sonata_block:
+    default_contexts: [cms]
+    blocks:
+        sonata.admin.block.admin_list:
+            contexts: [admin]
+        sonata.block.service.text:
+        sonata.block.service.action:
+        sonata.block.service.rss:
+
+
+
+
+
+
+
+
+
+
+
+
+
+
