--- a/src/Ibw/JobeetBundle/Resources/config/routing.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/routing.yml
@@ -11,3 +11,11 @@ ibw_jobeet_ibw_job:
 ibw_jobeet_homepage:
     path:     /
     defaults: { _controller: IbwJobeetBundle:Job:index }
+
+login:
+    path: /login
+    defaults: {_controller: IbwJobeetBundle:Default:login}
+
+login_check:
+    path: /login_check
+
