--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,8 +33,10 @@ security:
                 default_target_path: ibw_jobeet_homepage
 #                login_path: _demo_login
             logout:
-                path:   _demo_logout
-                target: _demo
+                path: /logout
+                target: /
+#                path:   _demo_logout
+#                target: _demo
             #anonymous: ~
             #http_basic:
             #    realm: "Secured Demo Area"
