--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,18 +1,21 @@
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        Ibw\JobeetBundle\Entity\User: sha512
+#        Symfony\Component\Security\Core\User\User: plaintext
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        in_memory:
-            memory:
-                users:
+        main:
+            entity: {class: Ibw\JobeetBundle\Entity\User, property: username}
+#        in_memory:
+#            memory:
+#                users:
 #                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
 #                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
-                    admin: { password: adminpass, roles: ['ROLE_ADMIN'] }
+#                    admin: { password: adminpass, roles: ['ROLE_ADMIN'] }
     firewalls:
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
