--- a/src/Ibw/JobeetBundle/Resources/config/routing.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/routing.yml
@@ -21,3 +21,7 @@ login_check:
 
 logout:
     path: /logout
+
+IbwJobeetBundle_category:
+    pattern: /category/{slug}/{page}
+    defaults: { _controller: IbwJobeetBundle:Category:show, page: 1 }
