--- a/src/Ibw/JobeetBundle/Resources/config/doctrine/Affiliate.orm.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/doctrine/Affiliate.orm.yml
@@ -1,5 +1,6 @@
 Ibw\JobeetBundle\Entity\Affiliate:
     type: entity
+    repositoryClass: Ibw\JobeetBundle\Entity\Repository\AffiliateRepository
     table: affiliate
     id:
         id:
@@ -34,4 +35,7 @@ Ibw\JobeetBundle\Entity\Affiliate:
                     category_id:
                         referencedColumnName: id
     lifecycleCallbacks:
-        prePersist: [ setCreatedAtValue ]
+        prePersist: [ setCreatedAtValue, setTokenValue ]
+
+
+
