--- a/src/Ibw/JobeetBundle/Resources/config/services.yml
+++ b/src/Ibw/JobeetBundle/Resources/config/services.yml
@@ -19,3 +19,12 @@ services:
             - ~
             - Ibw\JobeetBundle\Entity\Job
             - 'IbwJobeetBundle:JobAdmin'
+
+    ibw.jobeet.admin.affiliate:
+        class: Ibw\JobeetBundle\Admin\AffiliateAdmin
+        tags:
+            - { name: sonata.admin, manager_type:orm, group: jobeet, label: (机构)Affiliates}
+        arguments:
+            - ~
+            - Ibw\JobeetBundle\Entity\Affiliate
+            - 'IbwJobeetBundle:AffiliateAdmin'
